--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <title>Home - Cyclers Studio</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="./scss/styless.css">
-
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous" />
-
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous" />
     <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' />
     <link rel="icon" type="image/png" sizes="132x132" href="./images/cycler1-.png" />
@@ -733,28 +730,38 @@
 
             <div class="slide-track">
                 <div class="slide">
-                    <img src="./images/cycler1-.png" height="100" width="163" alt="engraced" />
+                    <img src="./images/mindshift.png" height="150" width="163" alt="engraced" />
                 </div>
                 <div class="slide">
-                    <img src="./images/az.jpeg" height="100" width="163" alt="engraced" />
+                    <img src="./images/az.jpeg" height="150" width="163" alt="engraced" />
                 </div>
                 <div class="slide">
-                    <img src="./images/cycler1-.png" height="163" width="163" alt="engraced" />
+                    <img src="./images/africa-removebg-preview.png" height="150" width="13" alt="engraced" />
                 </div>
                 <div class="slide">
-                    <img src="./images/az.png" height="100" width="163" alt="engraced" />
+                    <img src="./images/mindshift.png" height="150" width="163" alt="engraced" />
                 </div>
                 <div class="slide">
-                    <img src="./images/cycler1-.png" height="163" width="163" alt="engraced" />
+                    <img src="./images/az.png" height="150" width="163" alt="engraced" />
                 </div>
                 <div class="slide">
-                    <img src="./images/az.png" height="100" width="163" alt="engraced" />
+                    <img src="./images/cycler1-.png" height="150" width="163" alt="engraced" />
                 </div>
                 <div class="slide">
-                    <img src="./images/cycler1-.png" height="163" width="163" alt="engraced" />
+                    <img src="./images/az.jpeg" height="150" width="163" alt="engraced" />
                 </div>
                 <div class="slide">
-                    <img src="./images/az.png" height="100" width="163" alt="engraced" />
+                    <img src="./images/africa-removebg-preview.png" height="150" width="13" alt="engraced" />
+                </div>
+                <div class="slide">
+                    <img src="./images/mindshift.png" height="150" width="163" alt="engraced" />
+                </div>
+                <div class="slide">
+                    <img src="./images/az.png" height="150" width="163" alt="engraced" />
+                </div>
+
+                <div class="slide">
+                    <img src="./images/az.png" height="150" width="163" alt="engraced" />
                 </div>
             </div>
         </div>
