--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                     </div>
                 </div>
 
-                <button class="values-btn"> <a href="#">Book An Appointment</a></button>
+                <button class="values-btn"> <a href="./form/form.html">Book An Appointment</a></button>
             </div>
         </div>
 
