--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <div class="bar bar1"></div>
                     <div class="bar bar2"></div>
                     <div class="bar bar3"></div>
+                    <div class="bar bar3"></div>
                 </div>
 
 
@@ -233,14 +234,14 @@
 
         <div class="values-wraper">
             <div class="values">
-                <h1 class="values-description js-scroll slide-down">We Provide A Professional </br> Studio Experience
+                <h1 class="values-description">We Provide A Professional <br> Studio Experience
                 </h1>
 
                 <div class="assurance-we-have">
                     <div class="what-we-have">
                         <div class="live-equipment">
 
-                            <div class="live-equipment-description js-scroll slide-right">
+                            <div class="live-equipment-description">
                                 <h1>Quality and <br>standard equipment</h1>
                                 <p>Best tools or no tools </p>
                             </div>
@@ -253,7 +254,7 @@
                                     slovoslagarskoj </p>
                             </div>
                         </div>     -->
-                        <div class="professional-equipment js-scroll slide-left">
+                        <div class="professional-equipment">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
                             <div class="live-equipment-description second___layer ">
                                 <h1>Experienced <br>professionals</h1>
@@ -267,7 +268,7 @@
                     <div class="what-we-have">
                         <div class="live-equipment">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
-                            <div class="live-equipment-description js-scroll slide-right">
+                            <div class="live-equipment-description">
                                 <h1>Conducive environment</h1>
                                 <p>Compelling and Irresistible ambience </p>
                             </div>
@@ -279,7 +280,7 @@
 
                             </div>
                         </div>
-                        <div class="professional-equipment js-scroll slide-left">
+                        <div class="professional-equipment">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
                             <div class="live-equipment-description">
                                 <h1>Irresistible terms <br>and conditions</h1>
@@ -293,7 +294,7 @@
                     <div class="what-we-offer">
                         <div class="sound-quality">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
-                            <div class="live-equipment-description js-scroll slide-right">
+                            <div class="live-equipment-description">
                                 <h1>Customer Satisfaction<br> Guarantee</h1>
                                 <p>Satisfying you is our delight </p>
                             </div>
@@ -308,7 +309,7 @@
                         </div>     -->
                         <div class="own-arrangements">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
-                            <div class="own-arrangements-description js-scroll slide-left">
+                            <div class="own-arrangements-description">
                                 <h1>Value overload</h1>
                                 <p>We give you more than your expectations </p>
                             </div>
@@ -356,7 +357,7 @@
                     </div>
 
                     <div class="grid-item  js-scroll slide-down">
-                        <img src="./images/DSC_0107 (1).jpg" alt="">
+                        <img src="./images/intro.jpg" alt="">
                         <div class="img-text">
                             <div class="cont">
                                 <h4>INDOOR</h4>
@@ -378,7 +379,7 @@
                         </div>
                     </div>
                     <div class="grid-item  js-scroll slide-down">
-                        <img src="./images/1.jpeg" alt="">
+                        <img src="./sound_production/images/1.jpeg" alt="">
                         <div class="img-text">
                             <div class="cont">
                                 <h4>AUDIO</h4>
@@ -387,7 +388,7 @@
                         </div>
                     </div>
                     <div class="grid-item  js-scroll slide-down">
-                        <img src="./images/cycler event artists.jpg" alt="">
+                        <img src="./images/tacha.jpg" alt="">
                         <div class="img-text">
                             <div class="cont">
                                 <h4>CYCLERS CONCERT</h4>
@@ -397,7 +398,7 @@
                     </div>
 
                     <div class="grid-item  js-scroll slide-down">
-                        <img src="./images/4Z9A3737.jpg" alt="">
+                        <img src="./images/even2.jpg" alt="">
                         <div class="img-text">
                             <div class="cont">
                                 <h4>WEDDINGS/BIRTHDAYS</h4>
@@ -420,7 +421,7 @@
 
     <section>
 
-        <div class="container">
+        <div class="cntainer">
             <div class="section-title">
                 <h1>Meet Our Team</h1>
             </div>
@@ -634,7 +635,7 @@
                         </div>
                         <div class="team-content">
                             <h2 style="font-size: 15px;">Deborah Ezinne Ifegwu </h2>
-                            <h3>Content creator/Social media manager </h3>
+                            <h3>Social Media Manager </h3>
                             <!-- <p style="font-size: 12px;">Deborah is a social butterfly, she enjoys beauty and fashion contents. Totally a social media person and is passionate about her job. .</p> -->
                             <h4>
                                 <!-- Add font awesome icons -->
@@ -657,7 +658,7 @@
                 <div class="column blogBox moreBox">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
-                            <img src="/images/gil.jpeg" alt="Team Image">
+                            <img src="/images/gil.jpg" alt="Team Image">
                         </div>
                         <div class="team-content">
                             <h2>Gilgal Umia </h2>
@@ -733,7 +734,7 @@
                     <img src="./images/mindshift.png" height="150" width="163" alt="engraced" />
                 </div>
                 <div class="slide">
-                    <img src="./images/az.jpeg" height="150" width="163" alt="engraced" />
+                    <img src="./images/az.png" height="150" width="163" alt="engraced" />
                 </div>
                 <div class="slide">
                     <img src="./images/africa-removebg-preview.png" height="150" width="13" alt="engraced" />
@@ -745,10 +746,11 @@
                     <img src="./images/az.png" height="150" width="163" alt="engraced" />
                 </div>
                 <div class="slide">
-                    <img src="./images/cycler1-.png" height="150" width="163" alt="engraced" />
+                    <img src="./images/africa-removebg-preview.png" height="150" width="13" alt="engraced" />
                 </div>
+
                 <div class="slide">
-                    <img src="./images/az.jpeg" height="150" width="163" alt="engraced" />
+                    <img src="./images/az.png" height="150" width="163" alt="engraced" />
                 </div>
                 <div class="slide">
                     <img src="./images/africa-removebg-preview.png" height="150" width="13" alt="engraced" />
@@ -760,9 +762,7 @@
                     <img src="./images/az.png" height="150" width="163" alt="engraced" />
                 </div>
 
-                <div class="slide">
-                    <img src="./images/az.png" height="150" width="163" alt="engraced" />
-                </div>
+
             </div>
         </div>
     </section>
