--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
             <span class="dots" onclick="currentSlide(1)"></span>
             <span class="dots" onclick="currentSlide(2)"></span>
             <span class="dots" onclick="currentSlide(3)"></span>
+            <span class="dots" onclick="currentSlide(3)"></span>
+            <span class="dots" onclick="currentSlide(3)"></span>
+            <span class="dots" onclick="currentSlide(3)"></span>
         </div>
 
 
@@ -217,6 +220,30 @@
                             </div>
                         </div>
                     </div>
+                    <!-- <div class="box-serve">
+                        <div class="box-serve2 js-scroll slide-down">
+                            <div class="content-serve">
+                                 <h2><img src="./images/video.png" alt="" width="100px" height="100px" srcset=""></h2> 
+                                <h3>Photography</h3>
+                                <p>Let our magic hands create and capture the special moments of your special days, events and anniversaries. You can book a session for your birthday shoot, family shoot, fashion show, modelling shoot, outdoor event, pre-wedding
+                                    and wedding shoot, religious programmes, conferences and more.
+                                </p>
+                                <a href="./form/form.html">BOOK NOW</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box-serve">
+                        <div class="box-serve2 js-scroll slide-down">
+                            <div class="content-serve">
+                                 <h2><img src="./images/video.png" alt="" width="100px" height="100px" srcset=""></h2> 
+                                <h3>Photography</h3>
+                                <p>Let our magic hands create and capture the special moments of your special days, events and anniversaries. You can book a session for your birthday shoot, family shoot, fashion show, modelling shoot, outdoor event, pre-wedding
+                                    and wedding shoot, religious programmes, conferences and more.
+                                </p>
+                                <a href="./form/form.html">BOOK NOW</a>
+                            </div>
+                        </div>
+                    </div> -->
 
                     <!-- Back and forward buttons
                     <a class="Back" onclick="plusSlides(-1)">&#10094;</a>
