--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
         <div class="values-wraper">
             <div class="values">
-                <h1 class="values-description">We Provide A Professional <br> Studio Experience
+                <h1 class="values-description" style="color: #feef3c;">We Provide A Professional <br> Studio Experience
                 </h1>
 
                 <div class="assurance-we-have">
@@ -973,11 +973,84 @@
     <script src="./js/scroll.js"></script>
     <script src="./js/load-more-button.js"></script>
 
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript">
+        var scrolltotop = {
+            setting: {
+                startline: 100,
+                scrollto: 0,
+                scrollduration: 1e3,
+                fadeduration: [500, 100]
+            },
+            controlHTML: '<img src="https://lh3.googleusercontent.com/pw/AM-JKLVRjjrvUbuCg65TbQ0af94dFSMGuSMy6_pI4DRYXhPRCSrUsskUO1unYqxhckxEXolNUhAxtJ9Hx2J23bfu_f2PxnNhlJuqClNcqpNX67URdlNhm6cEVhGtEJMkYYL27iPdcMjH6ETCLFRQTeGwQp2l=s48-no" />',
+            controlattrs: {
+                offsetx: 5,
+                offsety: 5
+            },
+            anchorkeyword: "#top",
+            state: {
+                isvisible: !1,
+                shouldvisible: !1
+            },
+            scrollup: function() {
+                this.cssfixedsupport || this.$control.css({
+                    opacity: 0
+                });
+                var t = isNaN(this.setting.scrollto) ? this.setting.scrollto : parseInt(this.setting.scrollto);
+                t = "string" == typeof t && 1 == jQuery("#" + t).length ? jQuery("#" + t).offset().top : 0, this.$body.animate({
+                    scrollTop: t
+                }, this.setting.scrollduration)
+            },
+            keepfixed: function() {
+                var t = jQuery(window),
+                    o = t.scrollLeft() + t.width() - this.$control.width() - this.controlattrs.offsetx,
+                    s = t.scrollTop() + t.height() - this.$control.height() - this.controlattrs.offsety;
+                this.$control.css({
+                    left: o + "px",
+                    top: s + "px"
+                })
+            },
+            togglecontrol: function() {
+                var t = jQuery(window).scrollTop();
+                this.cssfixedsupport || this.keepfixed(), this.state.shouldvisible = t >= this.setting.startline ? !0 : !1, this.state.shouldvisible && !this.state.isvisible ? (this.$control.stop().animate({
+                    opacity: 1
+                }, this.setting.fadeduration[0]), this.state.isvisible = !0) : 0 == this.state.shouldvisible && this.state.isvisible && (this.$control.stop().animate({
+                    opacity: 0
+                }, this.setting.fadeduration[1]), this.state.isvisible = !1)
+            },
+            init: function() {
+                jQuery(document).ready(function(t) {
+                    var o = scrolltotop,
+                        s = document.all;
+                    o.cssfixedsupport = !s || s && "CSS1Compat" == document.compatMode && window.XMLHttpRequest, o.$body = t(window.opera ? "CSS1Compat" == document.compatMode ? "html" : "body" : "html,body"), o.$control = t('<div id="topcontrol">' + o.controlHTML + "</div>").css({
+                        position: o.cssfixedsupport ? "fixed" : "absolute",
+                        bottom: o.controlattrs.offsety,
+                        right: o.controlattrs.offsetx,
+                        opacity: 0,
+                        cursor: "pointer"
+                    }).attr({
+                        title: "Scroll to Top"
+                    }).click(function() {
+                        return o.scrollup(), !1
+                    }).appendTo("body"), document.all && !window.XMLHttpRequest && "" != o.$control.text() && o.$control.css({
+                        width: o.$control.width()
+                    }), o.togglecontrol(), t('a[href="' + o.anchorkeyword + '"]').click(function() {
+                        return o.scrollup(), !1
+                    }), t(window).bind("scroll resize", function(t) {
+                        o.togglecontrol()
+                    })
+                })
+            }
+        };
+        scrolltotop.init();
+    </script>
+
 
 </body>
 
